--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,11 @@ project(echo-server)
 
 add_subdirectory("src")
 
+# Generate compile_commands.json and specify path to it
+# for clangd LSP server (for Neovim in my case)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+configure_file(
+    ${CMAKE_SOURCE_DIR}/.clangd.in
+    ${CMAKE_SOURCE_DIR}/.clangd
+)
+
